# pastec

./: CMakeLists.txt
include/: imageadder.h  imageloader.h  imagereranker.h  logging.h
include/orb/: orbindex.h  orbsearcher.h  orbwordindex.h
src/: imageadder.cpp  imageloader.cpp  imagereranker.cpp  logging.cpp
src/orb/: orbfeatureextractor.cpp  orbindex.cpp  orbsearcher.cpp  orbwordindex.cpp
